--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous" />
 
     <!--Application title-->
-    <title>Food-Takeaway Project</title>
+    <title>Watch Your Food</title>
 
     <!--Font Links-->
     <link href='https://fonts.googleapis.com/css?family=Koulen' rel='stylesheet'>
